--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -19,29 +19,16 @@ bind R source-file '~/.tmux.conf'
 # Mouse
 set-option -g mouse on
 
-# Status
-# set -g status-left ""
-# set -g status-right ""
-# set -g status-justify right
-# setw -g status-style fg=colour255,bg=colour234
-# setw -g window-status-current-format '#[bg=colour2,fg=colour255]#{?client_prefix,#[bg=colour3],} #I #W '
-# setw -g window-status-format '#[fg=colour242] #I #W '
-# set -g base-index 1
-
-# theme
-# set -g @tmux_power_theme 'gold'
-# set -g @colors-solarized '256'
-# set -g @themepack 'powerline/block/cyan'
-set -g @dracula-plugins "cpu-usage gpu-usage ram-usage"
+# Theme
+set -g @dracula-plugins "cpu-usage ram-usage"
+set -g @dracula-show-left-icon smiley
+set -g base-index 1
 
 ## List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
-# set -g @plugin 'wfxr/tmux-power'
-# set -g @plugin 'seebi/tmux-colors-solarized'
-# set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'dracula/tmux'
 
 # Other examples:
